update func createAddress