@@ -4,12 +4,18 @@ import com.yas.customer.exception.NotFoundException;
 import com.yas.customer.model.UserAddress;
 import com.yas.customer.repository.UserAddressRepository;
 import com.yas.customer.utils.Constants;
-import com.yas.customer.viewmodel.AddressGetVm;
+import com.yas.customer.viewmodel.Address.AddressActiveVm;
+import com.yas.customer.viewmodel.Address.AddressGetVm;
+import com.yas.customer.viewmodel.Address.AddressPostVm;
+import com.yas.customer.viewmodel.UserAddress.UserAddressVm;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -18,29 +24,35 @@ import java.util.List;
 @RequiredArgsConstructor
 public class UserAddressService {
     private final UserAddressRepository userAddressRepository;
-
-    public List<AddressGetVm> getUserAddressList() {
+    private final LocationService locationService;
+    public List<AddressActiveVm> getUserAddressList() {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
-
         List<UserAddress> userAddressList = userAddressRepository.findAllByUserId(userId);
-        return userAddressList.stream()
-                .map(userAddress -> {
-                    AddressGetVm addressGetListResponseVm = new AddressGetVm(
-                            userAddress.getId(), userAddress.getIsActive());
-                    return addressGetListResponseVm;
-                })
-                .toList();
+
+        List<AddressGetVm> addressGetVms = locationService.getAddressesByIdList(userAddressList.stream()
+                .map(userAddress -> userAddress.getAddressId()).toList());
+
+        return IntStream.range(0, userAddressList.size())
+                .mapToObj(i -> new AddressActiveVm(addressGetVms.get(i).id(),
+                        addressGetVms.get(i).contactName(), addressGetVms.get(i).phone(),
+                        addressGetVms.get(i).addressLine1(), addressGetVms.get(i).city(),
+                        addressGetVms.get(i).zipCode(), addressGetVms.get(i).districtId(),
+                        addressGetVms.get(i).stateOrProvinceId(), addressGetVms.get(i).countryId(),
+                        userAddressList.get(i).getIsActive()))
+                .collect(Collectors.toList());
+
     }
 
-    public void createAddress(Long addressId) {
+    public UserAddressVm createAddress(AddressPostVm addressPostVm) {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
+
+        AddressGetVm addressGetVm = locationService.createAddress(addressPostVm);
         UserAddress userAddress = UserAddress.builder()
                 .userId(userId)
-                .addressId(addressId)
+                .addressId(addressGetVm.id())
                 .isActive(false)
                 .build();
-
-        userAddressRepository.save(userAddress);
+       return UserAddressVm.fromModel(userAddressRepository.save(userAddress), addressGetVm);
     }
 
     public void deleteAddress(Long id) {
